--- a/SEGUNDA PARTE/WWW/css/general.css
+++ b/SEGUNDA PARTE/WWW/css/general.css
@@ -70,14 +70,82 @@ form a{
 
 .registro-usuario{
 	position: relative;
-    left: 15%;
+    left: 10%;
     text-align: center;
-	width:846px;
+	width:1046px;
     height:365px;
+    background-color: #7F8C8D;
+	opacity: 0.9 !important;
+	margin-top: -50px;
 
 }
 
+.registro-usuario .cont-registro
+{	
+	border-radius: 10px;
+	display: block;
+	background-color: #f5f5f5;
+	text-align: center;
+	text-transform: uppercase;
+	padding: 20px 0px;
+}
+
+.cont-registro h4{
+	color: #EB984E;
+    font-size: 20px;
+    font-family: Montserrat_Bold, Verdana, Geneva, sans-serif;
+	text-align: center;
+}
 .registro-usuario form input {
 	margin-bottom: 10px;
+	border-radius: 10px;
+	width: 300px;
+	margin-left: 20px;
+	text-align: center; 
+
+
+}
+
+.registro-usuario label  {
+	color: #EB984E;
+    font-size: 10px;
+    font-family: Montserrat_Bold, Verdana, Geneva, sans-serif;
+
+}
+
+.list-class{
+	margin-top: 50px;
+	display: inline-block;
+	width: 500px !important;
+    left: 50%;
+    text-align: center; 
+    position: absolute;
+    width:646px;
+    height:265px;
+    margin-left: -203px; /*half width*/
+	border-radius: 10px; 
+}
+.list-class a{
+	display: block;
+	background-color: #EB984E;
+	color: #F4F6F7;
+    font-size: 15px;
+    font-family: Montserrat_Bold, Verdana, Geneva, sans-serif;
+    width:318.5px;
+    height: 50px;
+	
+}
+.list-class ul {
+	margin-top: 100px;
+}
+.list-class ul li a{
+    text-align: center !important;
+    background: white;
+}
+
+.submit{
+	margin-top: 20px;
+	width: 150px !important;
+	margin-right: 30px;
 }
 
